force-app/main/default/objects/SBQQ__PriceAction__c/fields/SBQQ__Field__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__Field__c</fullName>
    <inlineHelpText>Select the field you want updated when the conditions are met.</inlineHelpText>
    <label>Target Field</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>SBQQ__TargetObject__c</controllingField>
        <valueSetDefinition>
            <value><fullName>Unit Price</fullName><default>false</default><label>Unit Price</label></value>
            <value><fullName>Discount (%)</fullName><default>false</default><label>Discount (%)</label></value>
            <value><fullName>Discount (Amt)</fullName><default>false</default><label>Discount (Amt)</label></value>
            <value><fullName>Markup (%)</fullName><default>false</default><label>Markup (%)</label></value>
            <value><fullName>Markup (Amt)</fullName><default>false</default><label>Markup (Amt)</label></value>
            <value><fullName>Target</fullName><default>false</default><label>Target (%)</label></value>
            <value><fullName>Norm</fullName><default>false</default><label>Norm (%)</label></value>
            <value><fullName>Floor</fullName><default>false</default><label>Floor (%)</label></value>
            <value><fullName>Explanation</fullName><default>false</default><label>Explanation</label></value>
            <value><fullName>PriceListPrice__c</fullName><default>false</default><label>PriceListPrice__c</label></value>
            <value><fullName>SBQQ__PriceListPrice__c</fullName><default>false</default><label>SBQQ__PriceListPrice__c</label></value>
            <value><fullName>SBQQ__ListPrice__c</fullName><default>false</default><label>SBQQ__ListPrice__c</label></value>
            <value><fullName>SBQQ__Discount__c</fullName><default>false</default><label>SBQQ__Discount__c</label></value>
            <value><fullName>AdditionalDiscountUnit__c</fullName><default>false</default><label>AdditionalDiscountUnit__c</label></value>
            <value><fullName>List_Total_One_Time_Products__c</fullName><default>false</default><label>List_Total_One_Time_Products__c</label></value>
            <value><fullName>List_Total_Recurring_Products__c</fullName><default>false</default><label>List_Total_Recurring_Products__c</label></value>
            <value><fullName>SBQQ__AdditionalDiscountAmount__c</fullName><default>false</default><label>SBQQ__AdditionalDiscountAmount__c</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>