force-app/main/default/objects/SBQQ__PriceAction__c/fields/SBQQ__TargetObject__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__TargetObject__c</fullName>
    <inlineHelpText>Use Quote, Quote Line or Quote Line Pricing Guidance when Price Rule Evaluation Scope is Calculation. Use Product Option when Price Rule Evaluation Scope is Configuration.</inlineHelpText>
    <label>Target Object</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Quote</fullName><default>false</default><label>Quote</label></value>
            <value><fullName>Quote Line</fullName><default>false</default><label>Quote Line</label></value>
            <value><fullName>Product Option</fullName><default>false</default><label>Product Option</label></value>
            <value><fullName>Quote Line Pricing Guidance</fullName><default>false</default><label>Quote Line Pricing Guidance</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>